[gd_scene load_steps=11 format=3 uid="uid://b3wdwr05px4a6"]

[ext_resource type="Texture2D" uid="uid://cvoy3opdukp7c" path="res://assets/textures/enemy_b.png" id="1_f1kt5"]
[ext_resource type="Script" uid="uid://c50y6mk472tvs" path="res://scripts/enemy_b.gd" id="1_nukko"]
[ext_resource type="Texture2D" uid="uid://ciblnihskp61p" path="res://assets/textures/enemy_b_1.png" id="2_vwptu"]
[ext_resource type="Texture2D" uid="uid://wj3gsv4d0rmi" path="res://assets/textures/enemy_b_2.png" id="3_nukko"]

[sub_resource type="Animation" id="Animation_06d24"]
resource_name = "Active"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_vwptu"), ExtResource("3_nukko")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6jsk0"]
resource_name = "Idle"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_f1kt5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vwptu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_f1kt5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nukko"]
_data = {
&"Active": SubResource("Animation_06d24"),
&"Idle": SubResource("Animation_6jsk0"),
&"RESET": SubResource("Animation_vwptu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nukko"]
size = Vector2(654, 344)

[sub_resource type="CircleShape2D" id="CircleShape2D_vwptu"]
radius = 32.0

[node name="EnemyB" type="Node2D"]
script = ExtResource("1_nukko")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_f1kt5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nukko")
}
autoplay = "Idle"

[node name="ActivateZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateZone"]
shape = SubResource("RectangleShape2D_nukko")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_vwptu")
disabled = true
debug_color = Color(0.708025, 0.485336, 0.116112, 0.42)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="ActivateZone" to="." method="_on_activate_zone_body_entered"]
[connection signal="body_exited" from="ActivateZone" to="." method="_on_activate_zone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
